--- a/spring-data-jpa/src/main/resources/application.yml
+++ b/spring-data-jpa/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     password: jay
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
